# ANN

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
lib/activations/: CMakeLists.txt
lib/activations/src/: activations.cppm  concepts.cppm  relu.cppm  softmax.cppm
lib/cost_functions/: CMakeLists.txt
lib/cost_functions/src/: concepts.cppm  cost_functions.cppm  mse.cppm
lib/initializers/: CMakeLists.txt
lib/initializers/src/: concepts.cppm  glorot.cppm  initializers.cppm
lib/layers/: CMakeLists.txt
lib/layers/src/: concepts.cppm  dense.cppm  interface.cppm  layers.cppm
lib/model/: CMakeLists.txt
lib/model/src/: model.cppm
lib/network/: CMakeLists.txt
lib/network/src/: network.cppm
tests/: CMakeLists.txt
tests/src/: activations_test.cpp  cost_functions_test.cpp  initializers_test.cpp  layers_test.cpp  model_test.cpp  network_test.cpp
